--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,27 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    
+name: Checkout code
+    uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.x
+    
+name: Set up Python
+    uses: actions/setup-python@v2
+    with:
+      python-version: 3.x
 
-    - name: Run tests
-      run: main.py
+    
+name: Install dependencies
+    run: pip install pytest
+
+    
+name: Run tests
+    run: pytest
+
+    
+name: Upload test results
+    uses: actions/upload-artifact@v2
+    with:
+      name: test-results
+      path: test-results/
