--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,30 +5,16 @@ on: [push]
 jobs:
   test:
     name: Run Tests
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
-    
-name: Checkout code
-    uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-    
-name: Set up Python
-    uses: actions/setup-python@v
-    with:
-      python-version: 3.x
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.x
 
-    
-name: Install dependencies
-    run: pip install pytest
-
-    
-name: Run tests
-    run: pytest
-
-    
-name: Upload test results
-    uses: actions/upload-artifact@v2
-    with:
-      name: test-results
-      path: test-results/
+    - name: Run tests
+      run: pytest
