--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,8 @@ jobs:
       with:
         python-version: 3.x
 
+    - name: Install pytest
+      run: pip install pytest
+
     - name: Run tests
       run: pytest
