--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,10 @@ jobs:
       with:
         python-version: 3.x
 
-    - name: Install pytest
-      run: pip install pytest
+    - name: Install dependencies
+      run: 
+        python -m pip install --upgrade pip
+        pip install pytest
 
     - name: Run tests
       run: pytest
